picar/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: picar
  labels:
    app: picar
  name: picar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picar
  strategy: {}
  template:
    metadata:
      annotations:
        app: picar
        version: v1.2
      labels:
        app: picar
        version: v1
    spec:
      containers:
      - image: quay.io/yono/yolov8-demo:3.0
        imagePullPolicy: IfNotPresent
        name: flask-server
        ports:
        - containerPort: 5000
          protocol: TCP
        securityContext:
          privileged: true
      restartPolicy: Always
      serviceAccount: picar
      serviceAccountName: picar
