picar/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: picar
  labels:
    app: picar
spec:
  type: ClusterIP
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: picar
